Add test MaxPermSize settings in build