@@ -100,6 +100,10 @@ configure(subprojects.findAll { it.name != 'util' }) {
         onlyIf { JavaVersion.current().isJava7Compatible() }
     }
 
+    test {
+        jvmArgs "-XX:MaxPermSize=256m"
+    }
+
     project.ext.buildingWith = { n ->
         project.hasProperty(n) && project.property(n).toBoolean()
     }
